--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t amitkumar20491/docker-react .
+  - docker build -t amitkumar20491/docker-react -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true amitkumar20491/docker-react npm run test
